Create memeController code a function renderMeme()

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
 
             <div class="options-container">
                 <div class="canvas-manipulation-btns">
-                    <h2>Edit text lines</h2>
+                    <h2>Upload image</h2>
+                    <input type="file" id="imageUpload" accept="image/*">
 
+
+                    <h2>Edit text lines</h2>
                     <button class="line-select">Select line</button>
                     <button class="line-up">Line-up</button>
                     <button class="line-down">Line-down</button>
@@ -87,7 +90,7 @@
         <p>This is fun yeah..</p>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/meme.controller.js"></script>
 </body>
 
 </html>
