--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
     <main>
         <div class="gallery">
-            <img src="/img/meme-imgs/meme-imgs (square)/1.jpg">
-            <img src="/img/meme-imgs/meme-imgs (square)/2.jpg">
-            <img src="/img/meme-imgs/meme-imgs (square)/3.jpg">
-            <img src="/img/meme-imgs/meme-imgs (square)/4.jpg">
-            <img src="/img/meme-imgs/meme-imgs (square)/5.jpg">
-            <img src="/img/meme-imgs/meme-imgs (square)/6.jpg">
-            <img src="/img/meme-imgs/meme-imgs (square)/7.jpg">
-            <img src="/img/meme-imgs/meme-imgs (square)/8.jpg">
+            <img src="img/meme-imgs/meme-imgs (square)/1.jpg">
+            <img src="img/meme-imgs/meme-imgs (square)/2.jpg">
+            <img src="img/meme-imgs/meme-imgs (square)/3.jpg">
+            <img src="img/meme-imgs/meme-imgs (square)/4.jpg">
+            <img src="img/meme-imgs/meme-imgs (square)/5.jpg">
+            <img src="img/meme-imgs/meme-imgs (square)/6.jpg">
+            <img src="img/meme-imgs/meme-imgs (square)/7.jpg">
+            <img src="img/meme-imgs/meme-imgs (square)/8.jpg">
         </div>
 
         <div class="editor">
