Change txt in meme when user edits txt

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
             <div class="options-container">
                 <div class="canvas-manipulation-btns">
+                    <!-- moved it to be above the images,
+                         consider deleting this later if not needed -->
                     <!-- <h2>Upload image</h2>
                     <input type="file" id="imageUpload" accept="image/*"> -->
 
@@ -73,7 +75,7 @@
 
                     <input type="color" name="color" id="color-picker">
                     <input type="color" name="stroke" id="stroke-picker">
-                    <input type="text" name="meme-text" id="meme-text" placeholder="Meme text here">
+                    <input type="text" name="meme-text" id="meme-text" placeholder="Meme text here" value="">
 
                     <div class="sticker-container">
                         <p>👶</p>
