Add text color and stroke buttons

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <button class="align-c">←→</button>
                     <button class="align-r">→</button>
 
-                    <input type="color" name="color" id="color-picker">
-                    <input type="color" name="stroke" id="stroke-picker">
+                    <input type="color" name="color" class="color-picker" onchange="onSetColor(this.value)">
+                    <input type="color" name="stroke" class="stroke-picker" onchange="onSetStroke(this.value)">
                     <input type="text" name="meme-text" id="meme-text" placeholder="Meme text here" value="">
 
                     <!-- <div class="sticker-container">
