--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <input type="color" name="stroke" class="stroke-picker" onchange="onSetStroke(this.value)">
                     <input type="text" name="meme-text" id="meme-text" placeholder="Meme text here" value="">
 
+                    <!-- work on this later -->
                     <!-- <div class="sticker-container">
                         <p>👶</p>
                         <p>🤨</p>
