Before a little MVC work

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="options-container">
                 <div class="canvas-manipulation-btns">
                     <h2>Edit text lines</h2>
-                    <button class="line-select" disabled>Select line</button>
+                    <button class="line-switch">Switch line</button>
                     <button class="line-up" disabled>Line-up</button>
                     <button class="line-down" disabled>Line-down</button>
                     <button class="line-new">New line</button>
