Do some more MVC and its great

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Meme Generator</title>
 </head>
 
-<body onload="onInit(), onInitGallery()">
+<body onload="onInitGallery(), onInitMemes()">
     <header class="main-header">
         <div class="logo">
             <h1>TearsGenerator</h1>
@@ -86,6 +86,7 @@
         <p>This is fun yeah..</p>
     </footer>
 
+    <script src="js/services/util.service.js"></script>
     <script src="js/services/storage.service.js"></script>
     <script src="js/services/gallery.service.js"></script>
     <script src="js/services/meme.service.js"></script>
