Major refactor entire code to implement saveMeme()

--- a/index.html
+++ b/index.html
@@ -73,11 +73,18 @@
                     </div> -->
 
                     <div class="save-download-share">
-                        <button class="saveBtn" disabled>Save</button>
+                        <button class="saveBtn">Save</button>
                         <button class="downloadBtn">Download</button>
                         <button class="shareBtn">Share</button>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="memes-display">
+            <h2>Memes</h2>
+            <div class="memes-container">
+                <!-- Memes will be dynamically inserted here -->
             </div>
         </div>
     </main>
