Fix img upload and change color inputs to oninput

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <button class="align-c" disabled>←→</button>
                     <button class="align-r" disabled>→</button>
 
-                    <input type="color" name="color" class="color-picker" onchange="onSetColor(this.value)">
-                    <input type="color" name="stroke" class="stroke-picker" onchange="onSetStroke(this.value)">
+                    <input type="color" name="color" class="color-picker" oninput="onSetColor(this.value)">
+                    <input type="color" name="stroke" class="stroke-picker" oninput="onSetStroke(this.value)">
                     <input type="text" name="meme-text" id="meme-text" placeholder="Meme text here" value="">
 
                     <!-- work on this later -->
