Implement delete line button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <button class="line-up" disabled>Line-up</button>
                     <button class="line-down" disabled>Line-down</button>
                     <button class="line-new">New line</button>
-                    <button class="line-delete" disabled>Delete line</button>
+                    <button class="line-delete">Delete line</button>
                 </div>
 
                 <div class="text-editor">
