Implement lineUp lineDown (y axis)

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div class="canvas-manipulation-btns">
                     <h2>Edit text lines</h2>
                     <button class="line-switch">Switch line</button>
-                    <button class="line-up" disabled>Line-up</button>
-                    <button class="line-down" disabled>Line-down</button>
+                    <button class="line-up">Line-up</button>
+                    <button class="line-down">Line-down</button>
                     <button class="line-new">New line</button>
                     <button class="line-delete">Delete line</button>
                 </div>
